grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana
spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
      - name: grafana

        image: grafana/grafana:11.0.0

        ports:
        - containerPort: 3000
