prometheus.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      containers:
      - name: prometheus

        image: prom/prometheus:v2.53.0

        args:
        - "--config.file=/etc/prometheus/prometheus.yml"

        ports:
        - containerPort: 9090

        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus

      volumes:
      - name: config-volume

        configMap:
          name: prometheus-config
