service.yml
apiVersion: v1
kind: Service

metadata:
  name: node-service

spec:
  type: LoadBalancer

  selector:
    app: node-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: api-web
